# obj-renderer

./: CMakeLists.txt  README.md
ext/: project_path.hpp
src/: main.cpp  objloader.cpp  objloader.hpp  objrender.cpp  objrender.hpp
